generate report of today checkouts

--- a/viasus/viasus/templates/header_footer.html
+++ b/viasus/viasus/templates/header_footer.html
@@ -64,7 +64,7 @@
                     </li>
                     {% if request.user.is_superuser %}
                         <li class="nav-item">
-                            <a class="nav-link" href="{% url 'resume' %}">Resumen diario</a>
+                            <a class="nav-link" href="{% url 'resume' %}">Resumen</a>
                         </li>
                     {% endif %}
                 </ul>
