--- a/viasus/viasus/templates/resume.html
+++ b/viasus/viasus/templates/resume.html
@@ -2,6 +2,13 @@
 {% block content %}
 <h1>RESUMEN</h1>
 <h1>RESUMEN</h1>
+<form action="{% url 'download_file' %}" method="post">
+    {% csrf_token %}
+    <label for="resumeDate">Fecha:</label>
+    <input type="date" name="resumeDate" id="my-date-input">
+    <button type="submit" class="btn btn-info">Emitir resumen</button>
+</form>
+<h1>{{carro}}</h1>
 <h1>RESUMEN</h1>
 <h1>RESUMEN</h1>
 {% endblock %}
