--- a/viasus/catalogo/templates/catalogue.html
+++ b/viasus/catalogo/templates/catalogue.html
@@ -11,23 +11,24 @@
                         <h5 class="card-title">{{ product.codigo }}</h5>
                         <p class="card-text">{{ product.titulo }}</p>
                         <p class="card-text">Precio: $ {{ product.precio }}</p>
-                        <form action="{% url 'carro:agregar' product.id %}" class="container" method="post">
-                            {% csrf_token %}
+                        <!-- <form class="container" method="post">
+                            {% csrf_token %} -->
                             <div class="input-group row">
                                 <div class="input-group-prepend col">
                                     <button name="{{ product.codigo }}" type="button" class="btn btn-danger" onclick="decreaseQuantity(this)" title="Restar">-</button>
                                 </div>
-                                <input class="form-control col" name="{{ product.codigo }}" id="{{ product.codigo }}" type="number" value="0" min="0">
+                                <input class="form-control col" name="{{ product.codigo }}" id="{{ product.codigo }}" type="number" value="0" min="0" tag="">
+                                <input class="{{ product.codigo }}" type="hidden" value="{{ product.id }}">
                                 <div class="input-group-append col">
                                     <button name="{{ product.codigo }}" type="button" class="btn btn-success" onclick="increaseQuantity(this)" title="Sumar">+</button>
                                 </div>
-                                <button type="submit" class="btn btn-primary col" title="Agregar al carro">
+                                <button class="btn btn-primary col" title="Agregar al carro" onclick="addItem(this)" name="{{ product.codigo }}">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-cart" viewBox="0 0 16 16">
                                         <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5M3.102 4l1.313 7h8.17l1.313-7zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4m7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4m-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2m7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2"></path>
                                     </svg>
                                 </button>
                             </div>
-                        </form>
+                        <!-- </form> -->
                     </div>
                 </div>
             </div>            
@@ -46,6 +47,20 @@
         const input = document.getElementById(btn.name);
         const newValue = parseInt(input.value) - 1;
         input.value = newValue >= 0 ? newValue : 0;
+    }
+    async function addItem(btn) {
+        const productId = document.getElementsByClassName(String(btn.name))[0].value;
+        console.log(btn.name+1);
+        const productQty = document.getElementById(btn.name).value;
+        fetch('{% url "carro:agregar" %}', {
+            method: "POST",
+            headers: {
+                'Content-Type': 'application/x-www-form-urlencoded',
+                'X-CSRFToken': '{{ csrf_token }}',
+            },
+            body: `product_id=${productId}&product_qty=${productQty}`
+        }
+        );
     }
 </script>
 {% endblock %}
