fix pedidos without yesterday requests and change language wait message

--- a/viasus/carro/templates/carro.html
+++ b/viasus/carro/templates/carro.html
@@ -73,9 +73,9 @@
     <div>
         <div id="loadingModal" class="modal" style="visibility:visible; opacity: 1; display: none;">
             <div class="modal__inner p3 center" style="height:600px;">
-                <h3>Please wait...</h3>
+                <h3>Por favor espere...</h3>
                 <p>
-                    Your request is processing. This might take a few moments.
+                    Su pedido se esta procesando. Esto podria tomar algunos instantes.
                 </p>
                 <img src="https://s3.scoopwhoop.com/anj/loading/594155876.gif">
             </div>
@@ -101,7 +101,7 @@
         // Not used
         function showLoader(){
             bodyEl = document.getElementsByTagName('body')
-            bodyEl.append("<div><div id='loadingModal' class='modal' style='visibility:visible; opacity: 1; display: none;'><div class='modal__inner p3 center' style='height:600px;'><h3>Please wait...</h3><p>Your request is processing. This might take a few moments.</p><img src='https://s3.scoopwhoop.com/anj/loading/594155876.gif'></div></div></div>");
+            bodyEl.append("<div><div id='loadingModal' class='modal' style='visibility:visible; opacity: 1; display: none;'><div class='modal__inner p3 center' style='height:600px;'><h3>Por favor espere...</h3><p>Su pedido se esta procesando. Esto podria tomar algunos instantes.</p><img src='https://s3.scoopwhoop.com/anj/loading/594155876.gif'></div></div></div>");
         }
     </script>
 {% endblock %}
